--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -29,7 +29,7 @@ runs:
     - id: vertex-execution
       env:
         notebooks: ${{ 'It''s open source!' }}
-      run: echo "::set-output name=test-var::$(echo $RANDOM)" #outputs random variable
+      run: echo "::set-output name=test-var::$(echo $notebooks)" #outputs random variable
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
