--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -29,8 +29,8 @@ runs:
       shell: bash
     - id: vertex-execution
       env:
-        hello-there: ${{ 'hello there' }}
-      run: echo "::set-output name=test-var::$(echo $hello-there)" #outputs hello-there
+        helloThere: ${{ 'hello there' }}
+      run: echo "::set-output name=test-var::$(echo $helloThere)" #outputs hello-there
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
