--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -30,7 +30,7 @@ runs:
     - id: vertex-execution
       env:
         helloThere: ${{ 'hello there' }}
-      run: echo "::set-output name=test-var::$(echo $helloThere)" #outputs hello-there
+      run: echo "::set-output name=test-var::$(echo ${helloThere})" #outputs hello-there
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
