--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -21,14 +21,14 @@ runs:
       shell: bash
     - id: random-number-generator
       env:
-        within-scope: ${{ 'i am a in-scope variable' }}
-      #run: echo "::set-output name=random-number::$(echo ${{env.GLO-VAR}})" # null output
-      run: echo "::set-output name=random-number::$(echo ${within-scope})" # null output
+        withinScope: ${{ 'i am a in-scope variable' }}
+      run: echo "::set-output name=random-number::$(echo ${{env.GLO-VAR}})" # null output
+      #run: echo "::set-output name=random-number::$(echo ${withinScope})" # outputs withinScope var successfully
       shell: bash
     - id: vertex-execution
       env:
         helloThere: ${{ 'hello there' }}
-      run: echo "::set-output name=test-var::$(echo ${helloThere})" #outputs hello there
+      run: echo "::set-output name=test-var::$(echo ${helloThere})" #outputs hello there successfully
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash          
