--- a/.github/actions/hello-world-composite-action/action.yml
+++ b/.github/actions/hello-world-composite-action/action.yml
@@ -22,7 +22,7 @@ runs:
     - id: random-number-generator
       env:
         withinScope: ${{ 'i am a in-scope variable' }}
-      run: echo "::set-output name=random-number::$(echo ${GLO-VAR})" # null output
+      run: echo "::set-output name=random-number::$(echo ${GLOVAR})" # null output
       #run: echo "::set-output name=random-number::$(echo ${withinScope})" # outputs withinScope var successfully
       shell: bash
     - id: vertex-execution
